[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Scores.gd" type="Script" id=1]
[ext_resource path="res://assets/pixel.png" type="Texture" id=2]
[ext_resource path="res://assets/AldotheApache.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=2]

size = 64
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=1]

size = 48
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Settings" ]

[sub_resource type="DynamicFont" id=3]

size = 48
use_mipmaps = false
use_filter = false
font_data = ExtResource( 3 )
_sections_unfolded = [ "Font", "Resource", "Settings" ]

[node name="Scores" type="Node"]

script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="." index="0"]

modulate = Color( 0.423529, 0.678431, 0.921569, 1 )
scale = Vector2( 1024, 576 )
texture = ExtResource( 2 )
centered = false
_sections_unfolded = [ "Transform", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="HighScore" type="Label" parent="." index="1"]

anchor_left = 0.5
anchor_top = 0.0
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -145.0
margin_top = 50.0
margin_right = 145.0
margin_bottom = 161.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0.211765, 0.494118, 1 )
text = "HIGH SCORE 
0"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_colors" ]

[node name="Boss1" type="Label" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.5
anchor_right = 0.0
anchor_bottom = 0.5
margin_left = 50.0
margin_top = -84.0
margin_right = 309.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "DASH BOSS KILLS
0"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_fonts" ]

[node name="Boss2" type="Label" parent="." index="3"]

anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = -342.0
margin_top = -84.0
margin_right = -50.0
margin_bottom = 84.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "LASER BOSS KILLS
0"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_fonts" ]

[node name="Boss3" type="Label" parent="." index="4"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -131.0
margin_top = -276.0
margin_right = 131.0
margin_bottom = -50.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "SPIN BOSS KILLS
0"
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Margin", "custom_fonts" ]

[node name="ToMenu" type="Button" parent="." index="5"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -136.0
margin_top = -82.0
margin_right = 135.0
margin_bottom = -35.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 3
size_flags_vertical = 1
custom_fonts/font = SubResource( 3 )
custom_colors/font_color = Color( 0.27451, 0.576471, 0.87451, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Back to Menu"
flat = true
align = 1
_sections_unfolded = [ "Size Flags", "Theme", "custom_colors", "custom_constants", "custom_fonts" ]

[connection signal="pressed" from="ToMenu" to="." method="_on_ToMenu_pressed"]


